[package]
name = "gitlab-rust-estimation-getter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "greg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "0.1500.0"
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3"
chrono = "0.4"
csv = "1.1.6"
confy = "0.4.0"
git-discover = "0.3.0"
git-config = "0.6.0"
